--- a/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Step3.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Step3.cshtml
@@ -9,7 +9,38 @@
         ko.applyBindings(pageModel, $("#ko_Question")[0]);
     });
 </script>
+<style>
+    .webuploader-container {
+	position: relative;
+}
+.webuploader-element-invisible {
+	position: absolute !important;
+	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px,1px,1px,1px);
+}
+.webuploader-pick {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	
+	padding:0px;
+    width:100%;
+    height:100%;
+	color: #fff;
+	text-align: center;
+	border-radius: 3px;
+	overflow: hidden;
+}
+.webuploader-pick-hover {
+	
+}
 
+.webuploader-pick-disable {
+	opacity: 0.6;
+	pointer-events:none;
+}
+
+</style>
 <div class="right p-w92" id="ko_Question">
     <div class="admin_name admin_zi">问卷管理 -- <span>创建问卷</span></div>
     <div class="admin_frame min_h p-b30">
@@ -24,106 +55,125 @@
         </div>
         <div class="clear"></div>
         <input type="hidden" value="@ViewBag.WJ_ID" id="WJ_ID" />
+
         <div class="left p-w27 newly_bj">
             <h3 class="h3">添加试题</h3>
             <div class="newly_pad">
                 <h3>试题类型：</h3>
                 <div class="type m-t10">
                     <ul>
-                        <li class="type_hover"><a href="#">单选题</a></li>
-                        <li><a href="#">多选题</a></li>
-                        <li><a href="#">问答题</a></li>
-                        <li><a href="#">组合题</a></li>
-                        <li><a href="#">表格题</a></li>
-                    </ul><div class="clear"></div>
+                        <li class="type_hover"><a href="javascript:void(0)" data-bind="click:initdx">单选题</a></li>
+                        <li><a href="javascript:void(0)" data-bind="click:initdx">多选题</a></li>
+                        <li><a href="javascript:void(0)" data-bind="click:initdx">问答题</a></li>
+                        <li><a href="javascript:void(0)" data-bind="click:initdx">组合题</a></li>
+                        <li><a href="javascript:void(0)" data-bind="click:initdx">表格题</a></li>
+                    </ul>
+                    <div class="clear"></div>
                 </div>
+                <!--单选题-->
                 <div class="test1 test m-t20 ti">
-                    <div class="newd">
-                        <h3>试题标题：</h3>
-                        <textarea class="inf_textarea p-w98 left m-t10" name="" cols="20" rows="2">请输内容描述</textarea>
-                        <div class="clear"></div>
-                        <div class="new_img m-t15">
-                            <ul>
-                                <li>
-                                    <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5">图片图片图片图片图片</div>
-                                    <div class="right m-t4"><img src="~/Content/images/admin/img3.jpg"></div>
+                    <form action="/Admin/Question/SubmitedStep1" method="post" enctype="multipart/form-data">
+                        <div class="newd">
+                            <h3>试题标题：</h3>
+                            <textarea class="inf_textarea p-w98 left m-t10" name="" cols="20" rows="2" data-bind="value: Title">请输内容描述</textarea>
+                            <div class="clear"></div>
+                            <div class="new_img m-t15" data-bind="visible:$root.Title_pic_vido().length>0">
+                                <ul data-bind="foreach:$root.Title_pic_vido">
+                                    <li data-bind="if: t=='p'">
+                                        <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
+                                        <div class="left m-l5" data-bind="text:n"></div>
+                                        <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
+                                        <div class="clear"></div>
+                                    </li>
+                                    <li data-bind="if: t=='v'">
+                                        <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
+                                        <div class="left m-l5" data-bind="text:n"></div>
+                                        <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
+                                        <div class="clear"></div>
+                                    </li>
                                     <div class="clear"></div>
-                                </li>
-                                <li>
-                                    <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5">视频视频视频视频</div>
-                                    <div class="right m-t4"><img src="~/Content/images/admin/img3.jpg"></div>
-                                    <div class="clear"></div>
-                                </li>
+                                </ul>
+                            </div>
+                            <div class="m-t15" ><div class="a_red p-w100 vol_ico12" id="filePicker">点此添加图片或视频，一次可上传多个</div><div id="fileList"></div></div>
+                            <div class="new_hui m-t10" >(图片格式：jpg、png、gif格式，最佳尺寸130*130;视频格式：flv、mp4、avi格式，最大支持5M)</div>
+                            <h3 class="m-t10">答题时间：</h3>
+                            <input maxlength="3" class="inf_text p-w98 left m-t10" data-bind="value:Time" type="text" />
+                            <div class="clear"></div>
+                            <div class="new_hui m-t10">单位（秒），默认无限制</div>
+
+                            <div data-bind="foreach:$root.Item">
+
+
+                                <h3 class="m-t10 left">选项：</h3>
+                                <span class="right m-t10 new_lan"><a href="javascript:void(0)" data-bind="click:$root.Add_Item">添加其它</a></span>
+                                <span class="right m-t10 m-r10 new_lan"><a href="javascript:void(0)" data-bind="click:$root.Add_Item">添加选项</a></span>
+                                <span class="right m-t10 m-r10 new_lan"><a href="javascript:void(0)" data-bind="click:$root.Add_Item">移除选项</a></span>
                                 <div class="clear"></div>
-                            </ul>
-                        </div>
-                        <div class="m-t15"><input type="submit" value="点此添加图片或视频，一次可上传多个" class="a_red p-w100 vol_ico12" /></div>
-                        <div class="new_hui m-t10">(图片格式：jpg、png、gif格式，最佳尺寸130*130;视频格式：flv、mp4、avi格式，最大支持5M)</div>
-                        <h3 class="m-t10">答题时间：</h3>
-                        <input value="请输入答题时间" class="inf_text p-w98 left m-t10" type="">
-                        <div class="clear"></div>
-                        <div class="new_hui m-t10">单位（秒），默认无限制</div>
-                        <h3 class="m-t10 left">选项：</h3><span class="right m-t10 new_lan"><a href="#">添加其它</a></span><span class="right m-t10 m-r10 new_lan"><a href="#">添加选项</a></span>
-                        <div class="clear"></div>
-                        <input value="请输入选项内容" class="inf_text p-w85 left m-t15" type=""><div class="right m-t25"><img src="~/Content/images/admin/img16.png"></div>
-                        <div class="clear"></div>
-                        <div class="m-t10">
-                            <h3>分值：</h3>
-                            <input value="请输入分值" class="inf_text p-w98 left m-t10" type="">
-                            <div class="clear"></div>
-                            <h3 class="m-t10">附件：</h3>
-                            <div class="new_img m-t15">
-                                <ul>
-                                    <li>
-                                        <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                        <div class="left m-l5">图片图片图片图片图片</div>
-                                        <div class="right m-t4"><img src="~/Content/images/admin/img3.jpg"></div>
-                                        <div class="clear"></div>
-                                    </li>
-                                    <li>
-                                        <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                        <div class="left m-l5">视频视频视频视频</div>
-                                        <div class="right m-t4"><img src="~/Content/images/admin/img3.jpg"></div>
-                                        <div class="clear"></div>
-                                    </li>
+                                <input value="" class="inf_text p-w85 left m-t15" type="text" data-bind="value:item"><div class="right m-t25"><img src="~/Content/images/admin/img16.png"></div>
+                                <div class="clear"></div>
+                                <div class="m-t10">
+                                    <h3>分值：</h3>
+                                    <input value="" class="inf_text p-w98 left m-t10" type="text" data-bind="value:fz">
                                     <div class="clear"></div>
-                                </ul>
+                                    <h3 class="m-t10">附件：</h3>
+                                    <div class="new_img m-t15" data-bind="visible:pv.length>0">
+                                        <ul data-bind="foreach:pv">
+                                            <li data-bind="if: t=='p'">
+                                                <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
+                                                <div class="left m-l5" data-bind="text:n"></div>
+                                                <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
+                                                <div class="clear"></div>
+                                            </li>
+                                            <li data-bind="if: t=='v'">
+                                                <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
+                                                <div class="left m-l5" data-bind="text:n"></div>
+                                                <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
+                                                <div class="clear"></div>
+                                            </li>
+                                            <div class="clear"></div>
+                                        </ul>
+                                    </div>
+                                    <div class="m-t15"><input type="submit" value="点此添加图片或视频，一次可上传多个" class="a_red p-w100 vol_ico12" /></div>
+                                    <div class="new_hui m-t10">(图片格式：jpg、png、gif格式，最佳尺寸130*130;视频格式：flv、mp4、avi格式，最大支持5M)</div>
+                                </div>
                             </div>
-                            <div class="m-t15"><input type="submit" value="点此添加图片或视频，一次可上传多个" class="a_red p-w100 vol_ico12" /></div>
-                            <div class="new_hui m-t10">(图片格式：jpg、png、gif格式，最佳尺寸130*130;视频格式：flv、mp4、avi格式，最大支持5M)</div>
-                        </div>
-                        <input value="其它" class="inf_text p-w85 left m-t15" type=""><div class="right m-t25"><img src="~/Content/images/admin/img16.png"></div>
-                        <div class="clear"></div>
-                        <div class="m-t10" style="display: none">
-                            <h3>分值：</h3>
-                            <input value="请输入分值" class="inf_text p-w98 left m-t10" type="">
+
+
+                            <input value="其它" class="inf_text p-w85 left m-t15" type="text"><div class="right m-t25"><img src="~/Content/images/admin/img16.png"></div>
                             <div class="clear"></div>
-                            <h3 class="m-t10">附件：</h3>
-                            <div class="new_img m-t15">
-                                <ul>
-                                    <li>
-                                        <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                        <div class="left m-l5">图片图片图片图片图片</div>
-                                        <div class="right m-t4"><img src="~/Content/images/admin/img3.jpg"></div>
+                            <div class="m-t10">
+                                <h3>分值：</h3>
+                                <input  class="inf_text p-w98 left m-t10" type="text">
+                                <div class="clear"></div>
+                                <h3 class="m-t10">附件：</h3>
+                                <div class="new_img m-t15">
+                                    <ul>
+                                        <li>
+                                            <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
+                                            <div class="left m-l5">图片图片图片图片图片</div>
+                                            <div class="right m-t4"><img src="~/Content/images/admin/img3.jpg"></div>
+                                            <div class="clear"></div>
+                                        </li>
+                                        <li>
+                                            <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
+                                            <div class="left m-l5">视频视频视频视频</div>
+                                            <div class="right m-t4"><img src="~/Content/images/admin/img3.jpg"></div>
+                                            <div class="clear"></div>
+                                        </li>
                                         <div class="clear"></div>
-                                    </li>
-                                    <li>
-                                        <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                        <div class="left m-l5">视频视频视频视频</div>
-                                        <div class="right m-t4"><img src="~/Content/images/admin/img3.jpg"></div>
-                                        <div class="clear"></div>
-                                    </li>
-                                    <div class="clear"></div>
-                                </ul>
+                                    </ul>
+                                </div>
+                                <div class="m-t15"><input type="submit" value="点此添加图片或视频，一次可上传多个" class="a_red p-w100 vol_ico12" /></div>
+                                <div class="new_hui m-t10">(图片格式：jpg、png、gif格式，最佳尺寸130*130;视频格式：flv、mp4、avi格式，最大支持5M)</div>
                             </div>
-                            <div class="m-t15"><input type="submit" value="点此添加图片或视频，一次可上传多个" class="a_red p-w100 vol_ico12" /></div>
-                            <div class="new_hui m-t10">(图片格式：jpg、png、gif格式，最佳尺寸130*130;视频格式：flv、mp4、avi格式，最大支持5M)</div>
+
+                            <div class="center"><input class="sub w-110 m-t50" type="submit" name="" data-bind="click:$root.Save_dx" value="保存"></div>
+
+
                         </div>
-                        <div class="center"><input class="sub w-110 m-t50" type="submit" name="" value="保存"></div>
-                    </div>
+                    </form>
                 </div>
+                <!--多选题-->
                 <div class="test1 test m-t20 ti" style="display:none">
                     <div class="newd">
                         <h3>试题标题：</h3>
@@ -211,6 +261,7 @@
                         <div class="center"><input class="sub w-110 m-t50" type="submit" name="" value="保存"></div>
                     </div>
                 </div>
+                <!--问答题-->
                 <div class="test1 test m-t20 ti" style="display:none">
                     <div class="newd">
                         <h3>试题标题：</h3>
@@ -257,6 +308,7 @@
                         <div class="center"><input class="sub w-110 m-t50" type="submit" name="" value="保存"></div>
                     </div>
                 </div>
+                <!--组合题-->
                 <div class="test1 test m-t20 ti" style="display:none">
                     <div class="newd">
                         <h3>试题标题：</h3>
@@ -289,6 +341,7 @@
                         <div class="center"><input class="sub w-110 m-t50" type="submit" name="" value="添加子试题"></div>
                     </div>
                 </div>
+                <!--表格题-->
                 <div class="test1 test m-t20 ti" style="display:none">
                     <div class="newd">
                         <h3>试题标题：</h3>
@@ -442,14 +495,3 @@
         <div class="clear"></div>
     </div>
 </div>
-
-<script type="text/javascript">
-    $(".type ul li").click(function () {
-        $(".type ul li").removeClass("type_hover");
-        $(this).addClass("type_hover");
-        var Index = $(this).index();
-        $(".ti").hide();
-        $(".ti:eq(" + Index + ")").show();
-
-    })
-</script>>
