--- a/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Step2.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Step2.cshtml
@@ -12,7 +12,7 @@
 
 <div class="right p-w92" id="ko_Question">
     <div class="admin_name admin_zi">问卷管理 -- <span>创建问卷</span></div>
-    <input type="hidden" value="@ViewBag.WJ_ID" id="WJ_ID" />
+    <input type="hidden" value="@ViewBag.WJ_ID" id="WJ_ID" name="WJ_nID" />
     <div class="admin_frame min_h">
         <div class="newly">
             <ul>
