--- a/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Step4.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Step4.cshtml
@@ -42,12 +42,12 @@
                     </td>
                     <td class="p-w20"><span class="vol_ico10 newly_span">上移</span><span class="vol_ico11 newly_span">下移</span></td>
                     <td class="p-w35">
-                        <span class="ico vol_ico3 m-r20"><a href="#">修改</a></span>
-                        <span class="ico_red vol_ico4 m-r20"><a href="#">删除</a></span>
-                        <span class="ico vol_ico14 m-r20"><a href="#">添加分页</a></span>
+                        <span class="ico vol_ico3 m-r20"><a href="javascript:void(0)" data-bind="attr: { href:'/Admin/Question/Modst?sjid='+ID+'&wjid='+wj_ID }">修改</a></span>
+                        <span class="ico_red vol_ico4 m-r20"><a href="javascript:void(0)" data-bind="click:$root.Delete_SJ">删除</a></span>
+                        <span class="ico vol_ico14 m-r20"><a href="javascript:void(0)" >添加分页</a></span>
 
-                        <span class="hei vol_ico9 m-r20"><a href="#">取消休息</a></span>
-                        <span class="ico vol_ico15"><a class="button button-big bg-main dialogs" data-toggle="click" data-target="#mydialogs" data-mask="1" data-width="640px" href="#">相加关联</a></span>
+                        <span class="hei vol_ico9 m-r20"><a href="javascript:void(0)">取消休息</a></span>
+                        <span class="ico vol_ico15"><a class="button button-big bg-main dialogs" data-toggle="click" data-target="#mydialogs" data-mask="1" data-width="640px" href="javascript:void(0)">相加关联</a></span>
                     </td>
                     <td>选A跳转至第3题，选B跳转至第3题，选C跳转至第3题，选D跳转至第3题</td>
                 </tr>
